--- a/assets/css/scss/pages/_photographer.scss
+++ b/assets/css/scss/pages/_photographer.scss
@@ -2,17 +2,71 @@
 // -----------------
 .app-photographer {
   .photographer {
-    &__infos {
-      padding: 50px;
-
-      background: $gray-light;
-    }
-
     &__wrapper {
       display: flex;
 
       align-items: center;
       justify-content: space-between;
+    }
+
+    // Infos
+    // -----
+    &__infos {
+      padding: 50px;
+
+      background: $gray-light;
+
+      .infos {
+        &__wrapper {
+          display: grid;
+
+          grid-template-columns: repeat(3, 1fr);
+          align-items: center;
+        }
+
+        &__country {
+          margin: 10px 0 20px 0;
+        }
+
+        &__button {
+          justify-self: center;
+        }
+
+        &__media {
+          position: relative;
+          width: 200px;
+          height: 200px;
+          margin-left: auto;
+
+          border-radius: 50%;
+          box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.25);
+        }
+
+        &__image {
+          @include fullcover;
+
+          border-radius: 50%;
+        }
+      }
+    }
+
+    &__pictures {
+      .pictures {
+        &__header {
+          margin-top: 10px;
+
+          form {
+            label {
+              display: inline-block;
+              margin-right: 25px;
+
+              @include dmsans--medium;
+              color: $black;
+              font-size: 18px;
+            }
+          }
+        }
+      }
     }
 
     // Modal
