--- a/assets/css/scss/commons/_form.scss
+++ b/assets/css/scss/commons/_form.scss
@@ -17,7 +17,8 @@
         color: $black-light;
       }
 
-      input {
+      input,
+      textarea {
         width: 100%;
         padding: 15px 10px;
 
@@ -25,6 +26,10 @@
         background: $white;
         font-size: 18px;
         border-radius: 5px;
+      }
+
+      textarea {
+        resize: none;
       }
 
       select {
