Added likes and a part of list sort.

--- a/assets/css/scss/cards/_media.scss
+++ b/assets/css/scss/cards/_media.scss
@@ -68,6 +68,15 @@
       color: $black;
       border: none;
       background: none;
+      transition: ease-in-out 0.2s;
+
+      &.liked {
+        color: $red;
+
+        &::after {
+          transform: translateY(-50%) scale(1.2);
+        }
+      }
 
       &::after {
         content: "";
@@ -79,6 +88,7 @@
 
         background: url("../img/icons/heart.svg") 100%/100% no-repeat;
         transform: translateY(-50%);
+        transition: ease-in-out 0.2s;
       }
     }
 
