--- a/assets/css/scss/commons/_form.scss
+++ b/assets/css/scss/commons/_form.scss
@@ -41,6 +41,12 @@
         border-radius: 5px;
         background: $red;
         color: $white;
+        transition: ease-in-out 0.2s;
+
+        &:focus {
+          background: $red-light;
+          color: $black;
+        }
       }
     }
   }
